# chorus

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  compose.yml  justfile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  eval.yml  replay.yml
adrs/: 0001-evidence-first-scope-and-lighthouse.md  0002-temporal-durable-orchestration.md  0003-redpanda-event-visibility.md  0004-agent-runtime-and-tool-gateway.md  0005-postgres-first-storage.md  0006-json-schema-contracts.md  0007-trace-evaluation-harness.md  0008-email-intake-via-mailpit.md  0009-local-only-operating-model.md  0010-observability-pipeline.md  0011-phase-2-governed-platform-expansion.md  0012-langgraph-agent-execution-runtime.md  0013-identity-authority-observability-boundaries.md  0014-connector-expansion-approval-hardening-scope.md  0015-second-workflow-proof-scope.md  0016-production-readiness-architecture-pack-scope.md  0017-langgraph-removed-from-agent-execution.md  0018-llm-provider-port.md  0019-audit-ports-and-replay-eval.md  0020-domain-refocus-uk-regulated-use-cases.md  README.md
chorus/: __init__.py  doctor.py
chorus/agent_runtime/: AGENTS.md  __init__.py  prompt_loader.py  response_schemas.py  runtime.py
chorus/bff/: __init__.py  app.py
chorus/connectors/: AGENTS.md  __init__.py  calendar.py  local.py  ticket.py  types.py  uc1.py  uc2.py  uc3.py
chorus/contracts/: __init__.py  check.py  gen.py
chorus/demo/: __init__.py  send_fixture.py
chorus/doctor/: __init__.py  __main__.py  _env.py  _net.py  _reporting.py  connector_port.py  env_drift.py  observability_port.py  projection_port.py  scaffold.py  service_import_contracts.py  stack_health.py  ui.py  workflow_runtime.py
chorus/eval/: AGENTS.md  __init__.py  common_invariants.py  invariants.py  live_provider_integration.py  replay.py  replay_comparator.py  run.py  scenario_player.py  types.py  uc2_workflow_playback.py  uc3_workflow_playback.py
chorus/llm_provider/: __init__.py  adapter_openai.py  adapter_replay.py  port.py  route_catalogue.py
chorus/observability/: __init__.py
chorus/persistence/: AGENTS.md  __init__.py  _query.py  audit_port.py  migrate.py  outbox.py  projection.py  provider_governance.py  redpanda.py  replay_runs.py  runtime_policy.py  uc1_connectors.py
chorus/tool_gateway/: AGENTS.md  __init__.py  gateway.py
chorus/workflows/: AGENTS.md  __init__.py  activities.py  intake.py  lighthouse.py  mailpit.py  spine.py  support.py  types.py  uc1.py  uc2.py  uc2_synthetic_intake.py  uc3.py  uc3_synthetic_intake.py  worker.py
contracts/: README.md
contracts/agents/: lighthouse_agent_io.schema.json  support_agent_io.schema.json
contracts/audit/: agent_invocation_record.schema.json  agent_invocation_transcript.schema.json  audit_event.schema.json
contracts/connector/: calendar_availability_lookup_args.schema.json  calendar_hold_cancellation_args.schema.json  calendar_hold_creation_args.schema.json  calendar_hold_proposal_args.schema.json  email_message_args.schema.json  gateway_verdict.schema.json  ticket_case_lookup_args.schema.json  ticket_case_update_proposal_args.schema.json  ticket_duplicate_case_lookup_args.schema.json  ticket_status_update_args.schema.json  tool_call.schema.json
contracts/eval/: eval_fixture.schema.json  replay_run_record.schema.json
docs/: architecture.md  backup-restore-dr-architecture.md  demo-script.md  deployment-topology-architecture.md  domain-model-uc2.md  domain-model-uc3.md  domain-model.md  evidence-map.md  governance-evidence.md  governance-guardrails.md  human-approval-audit-lifecycle.md  implementation-plan.md  invocation-authority-context.md  llm-observability-sidecar-evaluation.md  observability-user-journey-model.md  overview.md  phase-2-plan.md  policy-change-governance-workflow.md  product-brief-uc2.md  product-brief-uc3.md  product-brief.md  production-identity-iam-mapping.md  r1-adapter-mapping.md  r1-exit-criteria.md  r1-use-case-confirmation.md  r2-exit-criteria.md  r3-exit-criteria.md  retention-audit-storage-architecture.md  runbook.md  sdlc-operating-model.md  secrets-credential-handling.md  technical-architecture.md  workload-principal-model.md
docs/components/: eval.md  (+1 more)
eval/: README.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
infrastructure/: README.md
scripts/: dc  first-time-setup.sh  generate_connector_failure_history.py  generate_retry_exhaustion_history.py  generate_support_triage_history.py  generate_validator_redraft_history.py
services/_template/: Dockerfile  README.md  pyproject.toml
services/bff/: Dockerfile  README.md  pyproject.toml
services/intake-poller/: Dockerfile  README.md  pyproject.toml
tests/: README.md  conftest.py  test_contracts.py  test_route_governance_alignment.py  test_scaffold.py
workflows/: README.md
(+321 files in other folders)
