[project]
name = "chorus"
version = "0.1.0"
description = "Reference implementation of governed multi-agent workflow orchestration for enterprise operational processes."
requires-python = ">=3.14"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Krazyuniks" },
]

# Service-specific runtime dependencies are declared in `services/*/pyproject.toml`
# during Phase 1A. The root project carries shared contract-model and
# persistence-adapter dependencies, dev tooling, and shared linting.
dependencies = [
    "confluent-kafka>=2.12.2",
    "psycopg[binary]>=3.2",
    "pydantic>=2.13.3",
]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.56.1",
    "jsonschema[format]>=4.26.0",
    "pyright>=1.1",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
    "RUF",  # ruff-specific
]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.14"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
