[project]
name = "chorus-intake-poller"
version = "0.1.0"
description = "Container runtime for the Lighthouse Temporal worker and Mailpit intake activities."
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "opentelemetry-distro[otlp]>=0.50b0",
    "pip>=25.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.13.3",
    "temporalio>=1.26.0",
]

[tool.ruff]
extend = "../../pyproject.toml"
